Error Mitigation/MagiCoder/Data/javax_xml_crypto_dsig/javax_xml_crypto_dsigOutputResult.txt
Sample: XMLSignatureFactory_1
----------------------------------------------------------------
output:
./Data/javax_xml_crypto_dsig/javaFiles/XMLSignatureFactory_1.java:10: error: TransformParameterSpec is abstract; cannot be instantiated
            TransformParameterSpec spec = new TransformParameterSpec();
                                          ^
1 error


================================================================

